tests/syntax-error/DataTypeSignature.vix
Bool : Type
type Bool where
  False True : Bool
